--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -27,5 +27,5 @@ jobs:
       run: | 
           git config user.name "KratosST"
           git config user.email "zxiao76@gatech.edu"
-          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/KratosST/kratosst.github.io.git
+          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/KratosST/portfolio.git
           npm run deploy
